# aap-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.md.backup  ITERATION_LOG.md  LICENSE  MACMINI-SYNC.md  MEMO.md  README.md  skill.md  test_cross_provider.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.yml  markdown-link-check.json
.github.backup/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.yml  markdown-link-check.json
.github.backup/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
.github.backup/workflows/: ci.yml
.github/ISSUE_TEMPLATE/: adoption-report.md  bug-report.md  feature-request.md  protocol-proposal.md  question.md
.github/workflows/: ci.yml  sdk-publish.yml  sdk-test.yml
adopters/: README.md  agent-fiction-arena.md  molten-it-com.md
docs/: aap-vs-a2a.md  address-uniqueness.md  consumer-guide.md  faq.md  getting-started.md  provider-full-compatibility.md  provider-guide.md  provider-upgrade-guide.md
examples/: README.md
examples.backup/: README.md
examples.backup/javascript/: README.md
examples.backup/python/: README.md  aap_address.py
examples/javascript/: README.md
examples/python/: README.md  aap_address.py
provider/python-flask/: README.md  app.py
sdk/python/: README.md  pyproject.toml
sdk/python/aap/: __init__.py
sdk/python/tests/: test_address.py
spec/: README.md  aap-v0.02.md  aap-v0.03.md  aap-v0.04-discovery.md
